--- a/Customer_Churn/requirements.txt
+++ b/Customer_Churn/requirements.txt
@@ -4,6 +4,6 @@ numpy = 1.19.5
 joblib = 0.13.2
 sklearn = 0.24.2
 seaborn = 0.11.1
-imblearn.__version__
+imblearn = 0.8.0
 matplotlib = 3.4.2
 python = 3.7
